--- a/tournament-web-app/firebase.json
+++ b/tournament-web-app/firebase.json
@@ -5,6 +5,13 @@
     },
     "ui": {
       "enabled": true
-    }
+    },
+    "storage": {
+      "port": 9199
+    },
+    "singleProjectMode": true
+  },
+  "storage": {
+    "rules": "storage.rules"
   }
 }
