--- a/tournament-web-app/package.json
+++ b/tournament-web-app/package.json
@@ -30,6 +30,8 @@
     "luxon": "^3.4.4",
     "ng-recaptcha": "^13.2.1",
     "ngx-material-timepicker": "^13.1.1",
+    "ngx-quill": "^25.0.3",
+    "quill": "2.0.0-rc.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "uuid": "^9.0.1",
@@ -37,7 +39,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.0.3",
-    "@angular/cli": "^17.0.3",
+    "@angular/cli": "^17.2.0",
     "@angular/compiler-cli": "^17.0.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
