--- a/tournament-web-app/angular.json
+++ b/tournament-web-app/angular.json
@@ -26,6 +26,9 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/indigo-pink.css",
+              "./node_modules/quill/dist/quill.core.css",
+              "./node_modules/quill/dist/quill.bubble.css",
+              "./node_modules/quill/dist/quill.snow.css",             
               "src/styles.css"
             ],
             "scripts": [],
