--- a/tournament-web-app/firebase.json
+++ b/tournament-web-app/firebase.json
@@ -11,6 +11,10 @@
     },
     "singleProjectMode": true
   },
+  "firestore": {
+    "rules": "firestore.rules",
+    "indexes": "firestore.indexes.json"
+  },  
   "storage": {
     "rules": "storage.rules"
   }
