--- a/tournament-web-app/firebase.json
+++ b/tournament-web-app/firebase.json
@@ -9,13 +9,30 @@
     "storage": {
       "port": 9199
     },
-    "singleProjectMode": true
+    "singleProjectMode": true,
+    "hosting": {
+      "port": 5000
+    }
   },
   "firestore": {
     "rules": "firestore.rules",
     "indexes": "firestore.indexes.json"
-  },  
+  },
   "storage": {
     "rules": "storage.rules"
+  },
+  "hosting": {
+    "public": "dist\\tournament-web-app\\browser",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
   }
 }
