--- a/tournament-web-app/.vscode/launch.json
+++ b/tournament-web-app/.vscode/launch.json
@@ -6,6 +6,7 @@
       "name": "ng serve",
       "type": "chrome",
       "request": "launch",
+      "preLaunchTask": "npm: start",
       "url": "http://localhost:4200/"
     },
     {
